[metadata]
name = ceilometer-ecs
version = 0.0.1
summary = ECS custom meters for Ceilometer
description-file =
    README.rst
author = EMC, Inc.
author-email = jiale.huo@emc.com
home-page = https://hwstashprd01.isus.emc.com:8443/scm/naoil/ceilometer-ecs
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    ceilometer_ecs

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ceilometer_ecs/locale
domain = ceilometer-ecs

[update_catalog]
domain = ceilometer-ecs
output_dir = ceilometer_ecs/locale
input_file = ceilometer_ecs/locale/ceilometer-ecs.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometer_ecs/locale/ceilometer-ecs.pot

[entry_points]
ceilometer.discover =
    ecs_instances = ceilometer_ecs.discovery:ECSDiscovery

ceilometer.poll.central =
    ecs.meter = ceilometer_ecs.pollsters.meter:ECSPollster
